docs/api/qiskit/0.19/qiskit.providers.aer.extensions.SnapshotStatevector.mdx
---
title: SnapshotStatevector (v0.19)
description: API reference for qiskit.providers.aer.extensions.SnapshotStatevector in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotStatevector
---

# SnapshotStatevector

<Class id="qiskit.providers.aer.extensions.SnapshotStatevector" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot_statevector.py" signature="SnapshotStatevector(label, num_qubits=0)" modifiers="class">
  Snapshot instruction for statevector snapshot type

  Create a statevector state snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the instruction barrier size \[Default: 0].

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  **Additional Information:**

  This snapshot is always performed on all qubits in a circuit. The number of qubits parameter specifies the size of the instruction as a barrier and should be set to the number of qubits in the circuit.

  ## Attributes

  <span id="snapshotstatevector-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshotstatevector-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshotstatevector-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.label">
    Return snapshot label
  </Attribute>

  <span id="snapshotstatevector-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.params">
    return instruction params.
  </Attribute>

  <span id="snapshotstatevector-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotStatevector.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshotstatevector-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.add_decomposition" signature="SnapshotStatevector.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshotstatevector-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.assemble" signature="SnapshotStatevector.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="snapshotstatevector-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.broadcast_arguments" signature="SnapshotStatevector.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshotstatevector-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.c_if" signature="SnapshotStatevector.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshotstatevector-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.copy" signature="SnapshotStatevector.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotstatevector-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.define_snapshot_register" signature="SnapshotStatevector.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshotstatevector-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.inverse" signature="SnapshotStatevector.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshotstatevector-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.is_parameterized" signature="SnapshotStatevector.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshotstatevector-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.mirror" signature="SnapshotStatevector.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotstatevector-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.qasm" signature="SnapshotStatevector.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshotstatevector-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotStatevector.repeat" signature="SnapshotStatevector.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

